--- a/1-HTML-Basics/13-navs.html
+++ b/1-HTML-Basics/13-navs.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Footers</title>
+  <title>Nav</title>
 </head>
 <body>
-  <section style="background-color: blue; color: white; height: 600px;">
-    <h1>Greetings!</h1>
-    <span style="font-style: italic;">Put some lorem ipsum here</span>
-  </section>
+  <nav style="text-align: right;">
+    <a href="../1-HTML-Basics/index.html">HTML Basics</a>
+    <a href="../2-CSS-Basics/index.html">CSS Basics</a>
+  </nav>
+
+  <nav>
+    <h1>Vertical Navigation Bar</h1>
+    <ul>
+      <li>
+        <a href="./03-lists.html">Lists</a>
+      </li>
+      <li>
+        <a href="./05-images.html">Images</a>
+      </li>
+      <li>
+        <a href="./06-tables.html">Tables</a>
+      </li>
+    </ul>
+  </nav>
 
   <footer style="background-color: grey;">
     <p>Copyright © 2006 The Example Company</p>
